tests/cases/error/error_invalid_jinja.rapt
# line 1
$ for x inx
# line 3
